--- a/Content/intro_linear_syst.ipynb
+++ b/Content/intro_linear_syst.ipynb
@@ -19,9 +19,9 @@
    "metadata": {},
    "source": [
     "$$\\begin{array}{r}\n",
-    "       x_{1} & + & 5 \\, x_{2} & - & 5.3 \\, x_{3} & = & y_{1} \\\\\n",
-    "2.4 \\, x_{1} & - & 2 \\, x_{2} & + & x_{3} & = & y_{2} \\\\\n",
-    "7.8 \\, x_{1} & - & 4.1 \\, x_{2} & + & 6.4 \\, x_{3} & = & y_{3} \\\\\n",
+    "       x_{0} & + & 5   \\, x_{1} & - & 5.3 \\, x_{2} & = & y_{0} \\\\\n",
+    "2.4 \\, x_{0} & - & 2   \\, x_{1} & + &        x_{2} & = & y_{1} \\\\\n",
+    "7.8 \\, x_{0} & - & 4.1 \\, x_{1} & + & 6.4 \\, x_{2} & = & y_{2} \\\\\n",
     "\\end{array} \\: .\n",
     "$$"
    ]
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that $y_{i}$, $i = 1, 2, 3$, are [linear combinations](https://en.wikipedia.org/wiki/Linear_combination) of the variables $x_{1}$, $x_{2}$, $x_{3}$. It means that the derivative of $y_{i}$, $i = 1, 2, 3$, with respect to any variable $x_{1}$, $x_{2}$, $x_{3}$ does not depend on the variables $x_{1}$, $x_{2}$, $x_{3}$. For example, the derivative of $y_{2}$ with respect to $x_{3}$ is equal to $1$."
+    "Notice that $y_{i}$, $i = 0, 1, 2$, are [linear combinations](https://en.wikipedia.org/wiki/Linear_combination) of the variables $x_{0}$, $x_{1}$, $x_{2}$. It means that the derivative of $y_{i}$, $i = 0, 1, 2$, with respect to any variable $x_{0}$, $x_{1}$, $x_{2}$ does not depend on the variables $x_{0}$, $x_{1}$, $x_{2}$. For example, the derivative of $y_{1}$ with respect to $x_{2}$ is equal to $1$."
    ]
   },
   {
@@ -73,9 +73,9 @@
    "source": [
     "$$\\mathbf{y} = \\left[\n",
     "\\begin{array}{c}\n",
+    "y_{0} \\\\\n",
     "y_{1} \\\\\n",
-    "y_{2} \\\\\n",
-    "y_{3}\n",
+    "y_{2}\n",
     "\\end{array}\n",
     "\\right]$$"
    ]
@@ -93,9 +93,9 @@
    "source": [
     "$$\\mathbf{x} = \\left[\n",
     "\\begin{array}{c}\n",
+    "x_{0} \\\\\n",
     "x_{1} \\\\\n",
-    "x_{2} \\\\\n",
-    "x_{3}\n",
+    "x_{2}\n",
     "\\end{array}\n",
     "\\right] \\: .$$"
    ]
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Linear systems are very common in geophysical problems. In general, $\\mathbf{y}$ contains the geophysical data (or observables), e.g., gravity anomaly data, total-field anomaly data, seismic travel times, horizontal and vertical components of the electrical and magnetic fields, etc. Then, $\\mathbf{y}$ is usually known. Similarly, the matrix $\\mathbf{A}$ also contains observables (e.g., time, distance, depth to the top of a geological body, etc.). On the other hand, the vector $\\mathbf{x}$ usually contains the unkowns, which are the parameters to be estimated by solving the linear system. For example, they can represent a magnetic moment distribution, density contrast distribution, etc. "
+    "Linear systems are very common in geophysical problems. In general, $\\mathbf{y}$ contains the geophysical data (or observables), e.g., gravity data, total-field anomaly data, seismic travel times, horizontal and vertical components of the electrical and magnetic fields, etc. Then, $\\mathbf{y}$ is usually known. Similarly, the matrix $\\mathbf{A}$ also contains observables (e.g., time, distance, depth to the top of a geological body, etc.). On the other hand, the vector $\\mathbf{x}$ usually contains the unkowns, which are the parameters to be estimated by solving the linear system. For example, they can represent a magnetic moment distribution, density contrast distribution, etc. "
    ]
   },
   {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
