--- a/Content/triangular_systems.ipynb
+++ b/Content/triangular_systems.ipynb
@@ -102,32 +102,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise"
+    "### Exercise 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) In your `my_functions.py` file, create a function called `triu_system` that solves the linear system `Ax = y`, where `A` is an UPPER triangular matrix. The function must receive the matrix `A` and the vector `y` and return the computed vector `x`.\n",
+    "1) In your functions file, create a function called `triu_system` that solves the linear system `Ax = y`, where `A` is an UPPER triangular matrix. The function must receive the matrix `A` and the vector `y` and return the computed vector `x`.\n",
     "\n",
-    "2) In your `test_my_functions.py` file, create two tests. In the first test, create an UPPER triangular matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use `A0` and `y0` to compute a vector `x` with the function `triu_system`. Finally, compare the computed vector `x` and the expected vector `x0`. In the second test, compare the result produced by `triu_system` and the result produced by the [`numpy.linalg.solve`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html) (see the example presented below), given the same input."
+    "2) In your test file, create two tests. In the first test, create an UPPER triangular matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use `A0` and `y0` to compute a vector `x` with the function `triu_system`. Finally, compare the computed vector `x` and the expected vector `x0`. In the second test, compare the result produced by your `triu_system` and the result produced by the [`numpy.linalg.solve`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html) (see the example presented below), given the same input."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise"
+    "### Exercise 2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3) In your `my_functions.py` file, create a function called `tril_system` that solves the linear system `Ax = y`, where `A` is an LOWER triangular matrix. The function must receive the matrix `A` and the vector `y` and return the computed vector `x`.\n",
+    "3) In your functions file, create a function called `tril_system` that solves the linear system `Ax = y`, where `A` is an LOWER triangular matrix. The function must receive the matrix `A` and the vector `y` and return the computed vector `x`.\n",
     "\n",
-    "4) In your `test_my_functions.py` file, create two tests. In the first test, create a LOWER triangular matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use `A0` and `y0` to compute a vector `x` with the function `tril_system`. Finally, compare the computed vector `x` and the expected vector `x0`. In the second test, compare the result produced by `tril_system` and the result produced by the [`numpy.linalg.solve`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html) (see the example presented below), given the same input."
+    "4) In your test file, create two tests. In the first test, create a LOWER triangular matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use `A0` and `y0` to compute a vector `x` with the function `tril_system`. Finally, compare the computed vector `x` and the expected vector `x0`. In the second test, compare the result produced by `tril_system` and the result produced by the [`numpy.linalg.solve`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html) (see the example presented below), given the same input."
    ]
   },
   {
@@ -150,6 +150,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4.71 4.18 9.55 3.87 2.63]\n",
+      " [2.53 1.45 0.93 3.15 7.09]\n",
+      " [5.56 9.88 7.52 8.01 9.56]\n",
+      " [7.29 0.92 1.78 3.   1.33]\n",
+      " [5.57 1.26 4.74 0.22 9.29]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = 10*np.around(np.random.rand(N,N), decimals=3) + 0.1*np.identity(N)\n",
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -157,17 +179,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.85 3.54 5.32 2.22 3.9 ]\n",
-      " [3.62 4.76 5.34 9.46 2.19]\n",
-      " [3.36 0.72 5.16 8.16 7.52]\n",
-      " [9.62 4.24 1.45 8.96 1.42]\n",
-      " [1.23 6.64 2.51 2.98 2.12]]\n"
+      "[[4.71 0.   0.   0.   0.  ]\n",
+      " [2.53 1.45 0.   0.   0.  ]\n",
+      " [5.56 9.88 7.52 0.   0.  ]\n",
+      " [7.29 0.92 1.78 3.   0.  ]\n",
+      " [5.57 1.26 4.74 0.22 9.29]]\n"
      ]
     }
    ],
    "source": [
-    "A = 10*np.around(np.random.rand(N,N), decimals=3)\n",
-    "print(A)"
+    "L = np.tril(A)\n",
+    "print(L)"
    ]
   },
   {
@@ -179,13 +201,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.476 0.176 0.543 0.313 0.937]\n"
+      "[[4.71 4.18 9.55 3.87 2.63]\n",
+      " [0.   1.45 0.93 3.15 7.09]\n",
+      " [0.   0.   7.52 8.01 9.56]\n",
+      " [0.   0.   0.   3.   1.33]\n",
+      " [0.   0.   0.   0.   9.29]]\n"
      ]
     }
    ],
    "source": [
-    "y = np.around(np.random.rand(N), decimals=3)\n",
-    "print(y)"
+    "U = np.triu(A)\n",
+    "print(U)"
    ]
   },
   {
@@ -197,56 +223,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.85 0.   0.   0.   0.  ]\n",
-      " [3.62 4.76 0.   0.   0.  ]\n",
-      " [3.36 0.72 5.16 0.   0.  ]\n",
-      " [9.62 4.24 1.45 8.96 0.  ]\n",
-      " [1.23 6.64 2.51 2.98 2.12]]\n"
+      "[0.78  0.711 0.462 0.364 0.397]\n"
      ]
     }
    ],
    "source": [
-    "L = np.tril(A)\n",
-    "print(L)"
+    "x_true = np.around(np.random.rand(N), decimals=3)\n",
+    "print(x_true)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.85 3.54 5.32 2.22 3.9 ]\n",
-      " [0.   4.76 5.34 9.46 2.19]\n",
-      " [0.   0.   5.16 8.16 7.52]\n",
-      " [0.   0.   0.   8.96 1.42]\n",
-      " [0.   0.   0.   0.   2.12]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "U = np.triu(A)\n",
-    "print(U)"
+    "yu = np.dot(U, x_true)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0.56       -0.38890756 -0.20515243 -0.34908046  2.06874462]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(np.linalg.solve(L,y))"
+    "xu = np.linalg.solve(U, yu)"
    ]
   },
   {
@@ -255,22 +256,63 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-0.20700047  0.44567491 -0.48336732 -0.03511308  0.44198113]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(np.linalg.solve(U,y))"
+    "np.allclose(x_true, xu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yl = np.dot(L, x_true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xl = xu = np.linalg.solve(L, yl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(x_true, xl)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise"
+    "### Exercise 3"
    ]
   },
   {
