--- a/Content/gauss-elim-outer.ipynb
+++ b/Content/gauss-elim-outer.ipynb
@@ -20,14 +20,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook shows how the [Gaussian elimination](https://en.wikipedia.org/wiki/Gaussian_elimination) iteratively transforms an unstructured linear system `Ax = y` into an equivalent triangular system `Bx = z` having the same solution `x`."
+    "This notebook shows how the [Gaussian elimination](https://en.wikipedia.org/wiki/Gaussian_elimination) iteratively transforms an unstructured linear system $\\mathbf{A \\, x} = \\mathbf{y}$ into an equivalent triangular system $\\mathbf{B \\, x} = \\mathbf{z}$ having the same solution $\\mathbf{x}$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's consider a linear system `Ax = y` given by:"
+    "Let's consider a linear system $\\mathbf{A \\, x} = \\mathbf{y}$ given by:"
    ]
   },
   {
@@ -98,7 +98,7 @@
     "collapsed": true
    },
    "source": [
-    "The first step in transforming the system `Ax = y` into an equivalent triangular system `Bx = z` is calculating an intermediate linear system:"
+    "The first step in transforming the system $\\mathbf{A \\, x} = \\mathbf{y}$ into an equivalent triangular system $\\mathbf{B \\, x} = \\mathbf{z}$ is calculating an intermediate linear system:"
    ]
   },
   {
@@ -113,9 +113,9 @@
     "0 & \\times & \\times\n",
     "\\end{array} \\right]}_{\\mathbf{A}^{(1)}} \\,\n",
     "\\underbrace{\\left[ \\begin{array}{c}\n",
+    "x_{0} \\\\\n",
     "x_{1} \\\\\n",
-    "x_{2} \\\\\n",
-    "x_{3}\n",
+    "x_{2}\n",
     "\\end{array} \\right]}_{\\mathbf{x}} =\n",
     "\\underbrace{\\left[\n",
     "\\begin{array}{c}\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -262,9 +262,9 @@
     "0 & 0 & \\times\n",
     "\\end{array} \\right]}_{\\mathbf{A}^{(2)}} \\,\n",
     "\\underbrace{\\left[ \\begin{array}{c}\n",
+    "x_{0} \\\\\n",
     "x_{1} \\\\\n",
-    "x_{2} \\\\\n",
-    "x_{3}\n",
+    "x_{2}\n",
     "\\end{array} \\right]}_{\\mathbf{x}} =\n",
     "\\underbrace{\\left[\n",
     "\\begin{array}{c}\n",
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -425,12 +425,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this case, $\\mathbf{B} = \\mathbf{A}^{(2)}$ and $\\mathbf{z} = \\mathbf{y}^{(2)}$ form our desired equivalent system. The solution of this system is given by:"
+    "In this case, $\\mathbf{B} = \\mathbf{A}^{(2)}$ and $\\mathbf{z} = \\mathbf{y}^{(2)}$ form our desired equivalent system. The solution $\\mathbf{x}_{eq}$ of this system is given by:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,12 +441,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compare this solution with the solution `x` of the original system"
+    "Compare this solution with the solution $\\mathbf{x}$ of the original system"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the proccess of calculating $\\mathbf{A}^{(1)}$, $\\mathbf{y}^{(1)}$, $\\mathbf{A}^{(2)}$ and $\\mathbf{y}^{(2)}$ can be represented by an iterative outer product update."
+    "Note that the process of calculating $\\mathbf{A}^{(1)}$, $\\mathbf{y}^{(1)}$, $\\mathbf{A}^{(2)}$ and $\\mathbf{y}^{(2)}$ can be represented by an iterative outer product update."
    ]
   },
   {
@@ -539,7 +539,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This proccess of transforming the original system into an equivalent triangular system requires that all the elements $a_{(k-1)(k-1)}^{(k-1)}$ be nonzero. They are called **pivots**."
+    "This process of transforming the original system into an equivalent triangular system requires that all the elements $a_{(k-1)(k-1)}^{(k-1)}$ be nonzero. They are called **pivots**."
    ]
   },
   {
@@ -553,7 +553,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The matrix $\\left(\\mathbf{I} - \\mathbf{M}^{(k)}\\right)$ is called **Gauss transformation**, the vector $\\mathbf{t}^{(k)}$ is called **Gauss vector** and the non-null elements of $\\mathbf{t}^{(k)}$ are called **Gauss multipliers** (Golub and Van Loan, 2013)."
+    "The matrix $\\left(\\mathbf{I} - \\mathbf{M}^{(k)}\\right)$ is called **Gauss transformation**, the vector $\\mathbf{t}^{(k)}$ is called **Gauss vector** and the non-null elements of $\\mathbf{t}^{(k)}$ are called **Gauss multipliers** (Golub and Van Loan, 2013, p. 112)."
    ]
   },
   {
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,16 +599,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "A1 = (I - np.outer(t1, u0)).dot(A)"
+    "A1 = (I - np.outer(t1, u0))@A"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -644,16 +644,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y1 = (I - np.outer(t1, u0)).dot(y)"
+    "y1 = (I - np.outer(t1, u0))@y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -712,16 +712,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "B = (I - np.outer(t2, u1)).dot(A1)"
+    "B = (I - np.outer(t2, u1))@A1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -740,16 +740,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "z = (I - np.outer(t2, u1)).dot(y1)"
+    "z = (I - np.outer(t2, u1))@y1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -811,6 +811,13 @@
    "source": [
     "print(np.linalg.solve(A,y))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
