triangular systems, gauss elim, ex triangular

--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,9 +93,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2.  3. -1.]\n"
+     ]
+    }
+   ],
    "source": [
     "print(x)"
    ]
@@ -109,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,9 +147,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "P1 = np.identity(N)[[1,0,2]]\n",
     "\n",
@@ -150,36 +168,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2.  1. -1.]\n",
+      " [-3. -1.  2.]\n",
+      " [-2.  1.  2.]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(A)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-3. -1.  2.]\n",
+      " [ 2.  1. -1.]\n",
+      " [-2.  1.  2.]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(np.dot(P1, A))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  8. -11.  -3.]\n"
+     ]
+    }
+   ],
    "source": [
     "print(y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-11.   8.  -3.]\n"
+     ]
+    }
+   ],
    "source": [
     "print(np.dot(P1, y))"
    ]
@@ -193,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,16 +267,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.         -0.66666667  0.66666667]\n"
+     ]
+    }
+   ],
    "source": [
     "print(t1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,25 +293,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2.  1. -1.]\n",
+      " [-3. -1.  2.]\n",
+      " [-2.  1.  2.]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(A)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-3.         -1.          2.        ]\n",
+      " [ 0.          0.33333333  0.33333333]\n",
+      " [ 0.          1.66666667  0.66666667]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(A1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,9 +340,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-11.           0.66666667   4.33333333]\n"
+     ]
+    }
+   ],
    "source": [
     "print(y1)"
    ]
@@ -281,9 +371,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-3.         -1.          2.        ]\n",
+      " [ 0.          0.33333333  0.33333333]\n",
+      " [ 0.          1.66666667  0.66666667]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "P2 = np.identity(N)[[0,2,1]]\n",
     "\n",
@@ -292,25 +411,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-3.         -1.          2.        ]\n",
+      " [ 0.          1.66666667  0.66666667]\n",
+      " [ 0.          0.33333333  0.33333333]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(np.dot(P2, A1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-11.           4.33333333   0.66666667]\n"
+     ]
+    }
+   ],
    "source": [
     "print(np.dot(P2, y1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,16 +465,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.  0.  0.2]\n"
+     ]
+    }
+   ],
    "source": [
     "print(t2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,16 +491,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-3.         -1.          2.        ]\n",
+      " [ 0.          1.66666667  0.66666667]\n",
+      " [ 0.          0.          0.2       ]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(B)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,9 +519,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-11.           4.33333333  -0.2       ]\n"
+     ]
+    }
+   ],
    "source": [
     "print(z)"
    ]
@@ -380,9 +543,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2.  3. -1.]\n"
+     ]
+    }
+   ],
    "source": [
     "print(np.linalg.solve(B,z))"
    ]
@@ -396,9 +567,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2.  3. -1.]\n"
+     ]
+    }
+   ],
    "source": [
     "print(np.linalg.solve(A,y))"
    ]
@@ -449,27 +628,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(np.identity(N))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(P1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(P2)"
    ]
@@ -516,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,45 +770,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  2.   1.  -1.   8.]\n",
+      " [ -3.  -1.   2. -11.]\n",
+      " [ -2.   1.   2.  -3.]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(C0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ -3.  -1.   2. -11.]\n",
+      " [  2.   1.  -1.   8.]\n",
+      " [ -2.   1.   2.  -3.]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(C0_tilde)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ -3.          -1.           2.         -11.        ]\n",
+      " [  0.           0.33333333   0.33333333   0.66666667]\n",
+      " [  0.           1.66666667   0.66666667   4.33333333]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(C1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ -3.          -1.           2.         -11.        ]\n",
+      " [  0.           1.66666667   0.66666667   4.33333333]\n",
+      " [  0.           0.33333333   0.33333333   0.66666667]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(C1_tilde)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ -3.          -1.           2.         -11.        ]\n",
+      " [  0.           1.66666667   0.66666667   4.33333333]\n",
+      " [  0.           0.           0.2         -0.2       ]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(C2)"
    ]
@@ -653,9 +912,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ -3.  -1.   2. -11.]\n",
+      " [  2.   1.  -1.   8.]\n",
+      " [ -2.   1.   2.  -3.]]\n",
+      "[[ -3.          -1.           2.         -11.        ]\n",
+      " [  0.           0.33333333   0.33333333   0.66666667]\n",
+      " [  0.           1.66666667   0.66666667   4.33333333]]\n"
+     ]
+    }
+   ],
    "source": [
     "# k = 1\n",
     "\n",
@@ -666,9 +938,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ -3.          -1.           2.         -11.        ]\n",
+      " [  0.           1.66666667   0.66666667   4.33333333]\n",
+      " [  0.           0.33333333   0.33333333   0.66666667]]\n",
+      "[[ -3.          -1.           2.         -11.        ]\n",
+      " [  0.           1.66666667   0.66666667   4.33333333]\n",
+      " [  0.           0.           0.2         -0.2       ]]\n"
+     ]
+    }
+   ],
    "source": [
     "# k = 2\n",
     "\n",
@@ -686,9 +971,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ -3.          -1.           2.         -11.        ]\n",
+      " [  0.           0.33333333   0.33333333   0.66666667]\n",
+      " [  0.           1.66666667   0.66666667   4.33333333]]\n"
+     ]
+    }
+   ],
    "source": [
     "# k = 1\n",
     "print(C1)"
@@ -696,9 +991,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ -3.          -1.           2.         -11.        ]\n",
+      " [  0.           1.66666667   0.66666667   4.33333333]\n",
+      " [  0.           0.           0.2         -0.2       ]]\n"
+     ]
+    }
+   ],
    "source": [
     "# k = 2\n",
     "print(C2)"
@@ -814,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,48 +1129,6 @@
     "    if imax != i:\n",
     "        p[i], p[imax] = p[imax], p[i]\n",
     "    return p, C[p,:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    def Gauss_elim(A, y, check_input=True):\n",
-    "        N = A.shape[0]\n",
-    "        if check_input is True:\n",
-    "            assert A.ndim == 2, 'A must be a matrix'\n",
-    "            assert y.ndim == 1, 'y must be a vector'\n",
-    "            assert A.shape[1] == N, 'A must be square'\n",
-    "            assert y.size == N, 'A columns must be equal to y size'\n",
-    "\n",
-    "        # create matrix C by stacking A and y\n",
-    "        C = np.vstack([A.T, y]).T\n",
-    "\n",
-    "        #for k = 1:N-1\n",
-    "        for k in range(1, N):\n",
-    "        #for k in range(N-1):\n",
-    "\n",
-    "            # permutation step (computation of C tilde - eq. 3)\n",
-    "            p, C = permut(C, k-1)\n",
-    "            #p, C = permut(C, k)\n",
-    "\n",
-    "            # assert the pivot is nonzero\n",
-    "            assert C[k-1,k-1] != 0., 'null pivot!'\n",
-    "            #assert C[k,k] != 0., 'null pivot!'\n",
-    "\n",
-    "            # calculate the Gauss multipliers and store them \n",
-    "            # in the lower part of C (equations 5 and 7)\n",
-    "            C[k:,k-1] /= C[k-1,k-1]\n",
-    "            #C[k+1:,k] /= C[k,k]\n",
-    "\n",
-    "            # zeroing of the elements in the (k-1)th column (equation 8)\n",
-    "            C[k:,k:] -= np.outer(C[k:,k-1],C[k-1,k:])\n",
-    "            #C[k+1:,k+1:] -= np.outer(C[k+1:,k],C[k,k+1:])\n",
-    "\n",
-    "        # return the equivalent triangular system and Gauss multipliers\n",
-    "        return C[:,:N], C[:,N]"
    ]
   },
   {
@@ -1136,7 +1399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise"
+    "### Exercise 1"
    ]
   },
   {
@@ -1156,7 +1419,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise"
+    "### Exercise 2"
    ]
   },
   {
