notes for Gaussian elimination

--- a/Content/gauss-elim-outer.ipynb
+++ b/Content/gauss-elim-outer.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook shows how the [Gaussian elimination](https://en.wikipedia.org/wiki/Gaussian_elimination) iteratively transforms an unstructured linear system $\\mathbf{A \\, x} = \\mathbf{y}$ into an equivalent triangular system $\\mathbf{B \\, x} = \\mathbf{z}$ having the same solution $\\mathbf{x}$."
+    "This notebook shows how the [Gaussian elimination](https://en.wikipedia.org/wiki/Gaussian_elimination) iteratively transforms an unstructured linear system $\\mathbf{A \\, x} = \\mathbf{y}$ into an equivalent triangular system $\\mathbf{B \\, x} = \\mathbf{z}$ having the same solution $\\mathbf{x}$. The file `Content/Gaussian_elimination.pdf` shows an example of Gaussian elimination for $N = 4$."
    ]
   },
   {
@@ -810,6 +810,13 @@
    ],
    "source": [
     "print(np.linalg.solve(A,y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The file `Content/Gaussian_elimination.pdf` shows an example of Gaussian elimination for $N = 4$."
    ]
   },
   {
