--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The [Gaussian elimination](https://en.wikipedia.org/wiki/Gaussian_elimination) iteratively transforms an unstructured linear system $\\mathbf{A}\\mathbf{x} = \\mathbf{y}$ into an equivalent triangular system $\\mathbf{B}\\mathbf{x} = \\mathbf{z}$ having the same solution $\\mathbf{x}$. As pointed out in the previous class, the **pivots** needed for computing the **Gauss multipliers** must be nonzero. The presence of small pivots produces arbitrarily poor results, even for well-conditioned problems, showing that Gauss elimination may be an unstable method, depending on the elements of $\\mathbf{A}$ (Golub and Van Loan, 2013, p. 125)."
+    "The [Gaussian elimination](https://en.wikipedia.org/wiki/Gaussian_elimination) iteratively transforms an unstructured linear system $\\mathbf{A}\\mathbf{x} = \\mathbf{y}$ into an equivalent triangular system $\\mathbf{B}\\mathbf{x} = \\mathbf{z}$ having the same solution $\\mathbf{x}$. The file `Content/Gaussian_elimination.pdf` shows an example of Gaussian elimination for $N = 4$. As pointed out in the previous class, the **pivots** needed for computing the **Gauss multipliers** must be nonzero. The presence of small pivots produces arbitrarily poor results, even for well-conditioned problems, showing that Gauss elimination may be an unstable method, depending on the elements of $\\mathbf{A}$ (Golub and Van Loan, 2013, p. 125)."
    ]
   },
   {
@@ -907,7 +907,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "represents an outer product that affects only the terms $\\left[ \\, k : \\, ,  \\, k - 1 : \\, \\right]$ of matrix $\\mathbf{C}^{(k)}$."
+    "represents an outer product that affects only the terms $\\left[ \\, k : \\, ,  \\, k - 1 : \\, \\right]$ of matrix $\\mathbf{C}^{(k)}$. See the file `Content/Gaussian_elimination.pdf`."
    ]
   },
   {
@@ -1052,7 +1052,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and, consequently,"
+    "and, consequently (see the file `Content/Gaussian_elimination.pdf`),"
    ]
   },
   {
